LPS-70534 Use File.toURI to properly handle the file URL encoding